# jqp

./: .gitignore  .travis  .travis.yml  ChangeLog.rst  MANIFEST.in  README.md  README.rst  jqp  pyproject.toml  setup.py
.github/workflows/: test.yml
jqp/: __init__.py
scripts/: jqp
tests/: run_test.py
