[tool.poetry]
name = "jqp"
version = "0.1.0"
description = "JSON processor with Python one-liner"
license = "MIT"
authors = ["Yuya Unno <unnonouno@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/unnonouno/jqp"
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Utilities"
]


[tool.poetry.dependencies]
python = "^3.8"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.910"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
pysen = "0.10.4"

[tool.poetry.scripts]
jqp = "jqp:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
